--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
     "presets": ["env"],
-    "plugins": ["transform-object-rest-spread"]
+    "plugins": ["transform-es2015-modules-umd", "transform-object-rest-spread"]
 }
