--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "devDependencies": {
         "babel-cli": "^6.26.0",
+        "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
         "babel-preset-env": "^1.6.1",
         "commitizen": "^2.9.6",
