--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "cz-conventional-changelog": "^2.1.0",
         "husky": "^0.14.3",
         "jest": "^22.4.3",
+        "jest-expect-message": "^1.0.2",
         "prettier": "^1.11.1",
         "pretty-quick": "^1.4.1",
         "rimraf": "^2.6.2",
@@ -48,6 +49,7 @@
     },
     "jest": {
         "coverageDirectory": "./coverage/",
-        "collectCoverage": true
+        "collectCoverage": true,
+        "setupTestFrameworkScriptFile": "jest-expect-message"
     }
 }
